# LETAF

./: .env.example  .gitignore  AI_RULES.md  CLAUDE.md  Cargo.toml  DEPLOY.md  Prompts.txt
core/: Cargo.toml
core/src/: availability.rs  discount.rs  entity.rs  error.rs  hashing.rs  lib.rs  money.rs  permission.rs  reconcile.rs  util.rs
core/src/addon/: model.rs  repository.rs  service.rs
core/src/addon_group/: model.rs  repository.rs  service.rs
core/src/audit/: mod.rs  model.rs  repository.rs  service.rs
core/src/auth/: model.rs  repository.rs  service.rs
core/src/banner/: model.rs  repository.rs  service.rs
core/src/business_hours/: model.rs  repository.rs  service.rs
core/src/cash/: mod.rs  model.rs  repository.rs  service.rs
core/src/category/: icons.rs  mod.rs  model.rs  repository.rs  service.rs
core/src/company/: model.rs  repository.rs  service.rs
core/src/coupon/: model.rs  repository.rs  service.rs
core/src/customer/: model.rs  repository.rs  service.rs
core/src/customer_address/: model.rs  repository.rs  service.rs
core/src/dashboard/: mod.rs  model.rs  service.rs
core/src/finance/: analytics.rs  mod.rs  model.rs  repository.rs  service.rs
core/src/finance_category/: mod.rs  model.rs  repository.rs  service.rs
core/src/job_role/: mod.rs  model.rs  repository.rs  service.rs
core/src/order/: model.rs  repository.rs  service.rs
core/src/password_reset/: mod.rs  model.rs  repository.rs  service.rs
core/src/payment_gateway/: card.rs  gateway.rs  mod.rs  model.rs  pix_auto.rs  repository.rs  service.rs
core/src/payment_method/: mod.rs  model.rs  repository.rs  service.rs
core/src/plan/: mod.rs  model.rs  repository.rs  service.rs
core/src/printer/: model.rs  repository.rs  service.rs
core/src/product/: balance.rs  mod.rs  model.rs  repository.rs  service.rs  stock_movement.rs
core/src/subcategory/: model.rs  repository.rs  service.rs
core/src/subscription/: card_billing.rs  mod.rs  model.rs  pix_auto_billing.rs  repository.rs  service.rs
core/src/wallet/: mod.rs  model.rs  repository.rs  service.rs
core/tests/: addon_group_service_test.rs  category_service_test.rs  collaborator_guard_test.rs  coupon_discount_test.rs  customer_service_test.rs  dashboard_analytics_test.rs  discount_test.rs  finance_analytics_test.rs  money_test.rs  order_money_test.rs  product_service_test.rs  reconcile_test.rs  subscription_pricing_test.rs  wallet_balance_test.rs
desktop/: Cargo.toml
desktop/assets/sounds/: README.md
desktop/fonts/: README.md
desktop/migrations/: 001_initial.sql  002_sessions.sql  003_customers.sql  004_suppliers.sql  005_products_enrich.sql  006_categories.sql  007_customer_password.sql  008_orders.sql  009_order_cancellation_reason.sql  010_order_number.sql  011_subcategories.sql  012_product_subcategory.sql  013_order_delivery_type.sql  014_product_active.sql  015_product_image.sql  016_fix_product_subcategory_fk.sql  017_business_hours.sql  018_store_override.sql  019_orders_unique_number.sql  020_drop_suppliers.sql  021_company_info.sql  022_customer_profile_picture.sql  023_sort_order.sql  024_sync_indexes.sql  025_user_roles.sql  026_rename_sku_to_barcode.sql  027_product_web_visible.sql  028_product_balance_mode.sql  029_company_products_per_page.sql  030_product_cover_color.sql  031_company_contact_address.sql  032_company_orders_per_page.sql  033_product_unlimited_stock.sql  034_product_availability.sql  035_product_discount.sql  036_product_discount_tiers.sql  037_addon_groups.sql  038_addons.sql  039_product_addon_groups.sql  040_order_item_addons.sql  (+33 more)
desktop/src/: context.rs  format.rs  main.rs  nav_perms.rs  session.rs
desktop/src/alarm/: mod.rs  player.rs  watcher.rs
desktop/src/print/: mod.rs  pdf.rs
desktop/src/repository/: addon.rs  addon_group.rs  auth.rs  banner.rs  business_hours.rs  cash_movement.rs  cash_session.rs  category.rs  company.rs  coupon.rs  customer.rs  customer_address.rs  finance.rs  finance_category.rs  helpers.rs  job_role.rs  mod.rs  order.rs  payment_charge.rs  payment_method.rs  printer.rs  product.rs  reconcile.rs  subcategory.rs  subscription.rs  wallet.rs
desktop/src/sync/: health.rs  mod.rs  status.rs
desktop/src/ui/: alarm.rs  badges.rs  helpers.rs  image.rs  mod.rs  sync.rs
desktop/src/update/: mod.rs
desktop/ui/: icon_glyph.slint  main.slint  theme.slint  types.slint
desktop/ui/components/: admin_filter_bar.slint  buttons.slint  cards.slint  cash_icons.slint  empty_state.slint  form_card.slint  form_fields.slint  icons.slint  list_toolbar.slint  modal_shell.slint  (+2 more)
server/: Cargo.toml
server/migrations/: 001_initial.sql  002_customers.sql  003_suppliers.sql  004_products_enrich.sql  005_categories.sql  006_customer_password.sql  007_orders.sql  008_order_cancellation_reason.sql  009_order_number.sql  010_subcategories.sql  011_product_subcategory.sql  012_order_delivery_type.sql  013_product_active.sql  014_product_image.sql  015_fix_product_subcategory_fk.sql  016_business_hours.sql  017_fix_business_hours_timestamps.sql  019_store_override.sql  020_orders_unique_number.sql  021_drop_suppliers.sql  022_company_info.sql  023_customer_addresses.sql  024_customer_profile_picture.sql  025_sort_order.sql  026_sync_indexes.sql  027_user_roles.sql  028_rename_sku_to_barcode.sql  029_product_web_visible.sql  030_product_balance_mode.sql  031_company_products_per_page.sql  032_product_cover_color.sql  033_company_contact_address.sql  034_company_orders_per_page.sql  035_product_unlimited_stock.sql  036_product_availability.sql  037_product_discount.sql  038_product_discount_tiers.sql  039_addon_groups.sql  040_addons.sql  041_product_addon_groups.sql  (+37 more)
server/src/: billing.rs  bootstrap.rs  card_page.rs  card_session.rs  config.rs  context.rs  email.rs  error.rs  jwt.rs  lib.rs  main.rs  media.rs  rate_limit.rs
server/tests/: admin_gate.rs
web/: Cargo.toml
web/src/: account.rs  api.rs  app.rs  availability.rs  cart.rs  checkout.rs  discount.rs  favorites.rs  format.rs  lib.rs  main.rs  session.rs
web/style/: main.scss
web/tests/: discount_parity.rs
(+237 files in other folders)
