[package]
name = "letaf-core"
version = "0.1.0"
edition = "2021"

[features]
default = ["password-hashing"]
# `tokio` (rt) é necessário para `spawn_blocking` no hashing (bcrypt
# CPU-bound fora do executor). Só entra quando o hashing entra — o web
# SSR (WASM) usa o core sem esta feature e sem tokio.
password-hashing = ["dep:bcrypt", "dep:tokio"]

[dependencies]
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
thiserror = "2"
tracing = "0.1"
bcrypt = { version = "0.15", optional = true }
tokio = { version = "1", features = ["rt"], optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
