[package]
name = "letaf-desktop"
version = "0.1.0"
edition = "2021"

[dependencies]
letaf-core = { path = "../core" }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "uuid", "chrono", "migrate"] }
slint = "1"
uuid = { version = "1", features = ["v4"] }
rust_decimal = { version = "1", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
semver = "1"
sha2 = "0.10"
self-replace = "1"
# Carrega o `.env` da raiz (LETAF_SERVER_URL etc.) — mesma crate do server.
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rfd = "0.15"
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }
# Áudio para o alarme de novos pedidos. `default-features = false` evita
# trazer codecs pesados (mp3/flac/vorbis) — só precisamos da síntese de
# onda senoidal que vem no core e do output device padrão (`wav` é a
# feature mínima para o trait Source funcionar).
rodio = { version = "0.20", default-features = false, features = ["mp3"] }
# Geração de PDF para as comandas impressas. Usamos as 14 fontes
# built-in do PDF (Helvetica/Helvetica-Bold) — nenhum TTF embutido,
# sem dependência de fontes do SO. CUPS (Linux/macOS) e Windows
# imprimem PDF nativamente.
printpdf = "0.7"

[build-dependencies]
slint-build = "1"
