[package]
name = "letaf-server"
version = "0.1.0"
edition = "2021"

[dependencies]
letaf-core = { path = "../core" }
axum = "0.8"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "rust_decimal", "migrate"] }
rust_decimal = { version = "1", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
thiserror = "2"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
jsonwebtoken = "9"
# Integração Efi Bank: mTLS via .p12 exige `native-tls`; `json`
# para serialização REST.
reqwest = { version = "0.12", features = ["json", "native-tls"] }
# Token OAuth e dados do .p12 vivem em memória — `tokio::sync::RwLock`
# já vem em "full" do tokio acima.
# `base64` para Basic Auth do endpoint /oauth/token da Efi.
base64 = "0.22"
lettre = { version = "0.11.22", default-features = false, features = ["builder", "smtp-transport", "native-tls", "hostname", "pool", "tokio1", "tokio1-native-tls"] }
